2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	Utility function and macro to copy Lisp string to C string.
	* lisp.h (xlispstrdupa): New macro.
	(xlispstrdup): New prototype.
	* alloc.c (xlispstrdup): New function.
	* callint.c (Fcall_interactively):
	* fileio.c (Ffile_name_directory, Fexpand_file_name)
	(Fsubstitute_in_file_name):
	* frame.c (Fmake_terminal_frame): Use xlispstrdupa.
	* image.c (x_create_bitmap_from_file):
	* w32term.c (w32_term_init):
	* xterm.c (x_term_init): Use xlispstrdup.

2013-08-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* image.c (imagemagick_load_image): Make animated pictures work.
	There's still some problems with background color settings, though
	(bug#14700).

	* decompress.c (unwind_decompress): Always restore point.

2013-08-14  Xue Fuqiao  <xfq.free@gmail.com>

	* marker.c (set_marker): Reformat documentation.

2013-08-14  Paul Eggert  <eggert@cs.ucla.edu>

	* xdisp.c (cursor_type_changed): Now static.

	* image.c (imagemagick_filename_hint): New arg HINT_BUFFER.
	Use changed.  This avoids the need to call xmalloc and for the
	caller to call xfree, and avoids memory leaks in some situations.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	* xdisp.c (adjust_window_ends): Move duplicated code to new function.
	(try_window, try_window_reusing_current_matrix, try_window_id): Use it.
	(redisplay_window): If window_end_valid is cleared due to non-zero
	windows_or_buffers_changed, clear current_matrix_up_to_date_p and
	so do not call to try_cursor_movement for that window.

2013-08-14  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Convert window_end_pos and
	window_end_vpos from Lisp_Object to ptrdiff_t and int, respectively.
	(wset_window_end_pos, wset_window_end_vpos): Remove.
	* dispnew.c (adjust_glyph_matrix):
	* window.c (Fwindow_end, replace_window, set_window_buffer)
	(make_window):
	* xdisp.c (check_window_end, move_it_to, redisplay_internal)